@@ -1,3 +1,8 @@
+2010-10-21  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-get-inline-coding): Return `nil' in case of
+	errors.
+
 2010-10-19  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-do-file-attributes-with-stat)
